--- a/Exercicios/ProjetoCriativoANYCars/styles.css
+++ b/Exercicios/ProjetoCriativoANYCars/styles.css
@@ -44,7 +44,7 @@ body {
 }
 
 section {
-    background-image: linear-gradient(180deg, #000000 80%, #6bff00 100%);
+    background-image: linear-gradient(180deg, #000000 60%, #6bff00 100%);
     height: 100vh;
     position: relative;
 
@@ -77,19 +77,19 @@ section {
 
             & .content {
                 position: absolute;
-                right: 100px;
+                right: 50px;
                 width: 70%;
                 height: 100%;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: end;
-                gap: 20px;
+                gap: 30px;
 
 
                 font-weight: 400;
                 font-style: normal;
-                font-size: 12px;
+                font-size: 10px;
 
                 & .car-information {
                     font-weight: bold;
@@ -98,7 +98,7 @@ section {
                 & h2 {
                     font-size: 8em;
                     line-height: 1em;
-                    margin-bottom: 15px;
+                    margin-bottom: 35px;
 
                 }
 
@@ -233,11 +233,15 @@ section {
             }
 
             & .content {
-                & .car-information, h2, .description, .information {
+
+                & .car-information,
+                h2,
+                .description,
+                .information {
                     transform: translateX(200px);
                     transition: 0.7s;
                     transition-delay: 0.3s;
-
+                    opacity: 0;
                 }
 
                 & h2 {
@@ -252,7 +256,6 @@ section {
                     transition-delay: 0.9s;
                 }
             }
-
         }
 
         & .active {
@@ -264,22 +267,21 @@ section {
 
                 & img {
                     transform: rotate(-20deg);
-
                 }
+            }
 
-                & .content {
+            & .content {
 
-                    & .car-information,
-                    h2,
-                    .description,
-                    .information {
-                        transform: translateX(0);
+                & .car-information,
+                h2,
+                .description,
+                .information {
+                    transform: translateX(0);
+                    opacity: 1;
 
-                    }
                 }
             }
 
         }
-
     }
 }
