--- a/Exercicios/ProjetoCriativoANYCars/styles.css
+++ b/Exercicios/ProjetoCriativoANYCars/styles.css
@@ -71,6 +71,18 @@ section {
                     transform: rotate(-30deg);
                     /* rotaciona a imagem*/
                 }
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    background-color: #000000;
+                    width: 100%;
+                    height: 100px;
+                    top: 150%;
+                    left: 20px;
+                    border: 50%;
+                    filter: blur(50px);
+                }
             }
 
             & .content {
@@ -100,13 +112,13 @@ section {
 
                 & .car-information {
                     font-family: "League Gothic", sans-serif;
-                    font-size: 25px;
+                    font-size: 45px;
                     font-style: italic;
                 }
 
                 & .description {
                     color: #d9d9d9;
-                    font-size: 16px;
+                    font-size: 20px;
                     text-align: right;
                     max-width: 400px;
                     font-family: "League Gothic", sans-serif;
@@ -209,8 +221,11 @@ section {
 section {
 
     & .list {
+
+    --calculation: 1;
+
         & .item {
-            transform: translateX(100vw);
+            transform: translateX(calc(100vw *var(--calculation)));
             transition: 0.5s;
             opacity: 0;
 
@@ -227,7 +242,7 @@ section {
                 h2,
                 .description,
                 .information {
-                    transform: translateX(200px);
+                    transform: translateX(calc(200px * var(--calculation)));
                     transition: 0.7s;
                     transition-delay: 0.3s;
                     opacity: 0;
