--- a/Desafios Propostos/BarberDev/partials/_layout.scss
+++ b/Desafios Propostos/BarberDev/partials/_layout.scss
@@ -18,7 +18,7 @@
     content: '';
     display: block; /* Exibe como um bloco, necessário para largura e altura */
     position: absolute; /* Posicionamento absoluto em relação ao pai relativo */
-    background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121e), url(../assets/bg.svg);
+    background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121e), url(./assets/bg.svg);
     
     left: 0;
     top: 0;
