--- a/Desafios Propostos/BarberDev/style.css
+++ b/Desafios Propostos/BarberDev/style.css
@@ -94,7 +94,7 @@ i {
   content: "";
   display: block; /* Exibe como um bloco, necessário para largura e altura */
   position: absolute; /* Posicionamento absoluto em relação ao pai relativo */
-  background-image: linear-gradient(to bottom, transparent 40%, rgba(6, 18, 30, 0), #06121e), url(../assets/bg.svg);
+  background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121e), url(./assets/bg.svg);
   left: 0;
   top: 0;
   width: 100%;
