--- a/Desafios Propostos/Player Music/style.css
+++ b/Desafios Propostos/Player Music/style.css
@@ -1,7 +1,11 @@
+*{
+box-sizing: border-box;
+}
 
 body, html {
     padding: 0;
     margin: 0;
+    
     
     height: 100vh;
     display: flex;
@@ -88,7 +92,9 @@ progress {
 
 .pause {
     display: none;
+}
+
+.botao-pause {
     font-size: 50px;
     cursor: pointer;
-   
 }
