--- a/Desafios Propostos/Player Music/style.css
+++ b/Desafios Propostos/Player Music/style.css
@@ -5,8 +5,7 @@ box-sizing: border-box;
 body, html {
     padding: 0;
     margin: 0;
-    
-    
+        
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -17,10 +16,24 @@ body, html {
     color: #ddd;
     font-family: "Montserrat", sans-serif;
 }
+h1 {
+    margin-bottom: 50px;
+    text-align: center; 
+    font-weight: 700;
+}
+
+.container {
+    width: 500px;
+    text-align: center;
+}
+
 
 img {
     width: 300px;
     height: 300px;
+    object-fit: cover;
+    border-radius: 20px;
+    margin-bottom: 15px;
 }
 
 .description {
