--- a/Desafios Propostos/Player Music/style.css
+++ b/Desafios Propostos/Player Music/style.css
@@ -17,10 +17,18 @@ body, html {
     font-family: "Montserrat", sans-serif;
 }
 h1 {
-    margin-bottom: 50px;
+    margin-bottom: 5px;
     text-align: center; 
     font-weight: 700;
 }
+h3 {
+    font-size: 25px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 15px;
+    text-align: center;
+}
+
 
 .container {
     width: 500px;
