--- a/Desafios Propostos/Player Music/style.css
+++ b/Desafios Propostos/Player Music/style.css
@@ -119,3 +119,30 @@ progress {
     font-size: 50px;
     cursor: pointer;
 }
+
+
+@media (max-width: 480px) {
+
+    .music-player {
+        text-align: center;
+        padding: 20px;
+    }
+    img {
+        max-width: 100%;
+        border-radius: 10px;
+    }
+    h3, p {
+        margin: 10px 0;
+    }
+
+    .container {
+        width: 100%; /* Ajuste a largura para ocupar toda a tela */
+    }
+
+    img {
+        width: 100%; /* Ajuste a largura da imagem para ocupar toda a largura disponível */
+        height: auto; /* Mantenha a proporção da imagem */
+    }
+
+    /* Outros ajustes específicos para telas menores... */
+}
