--- a/Desafios Propostos/Player Music/style.css
+++ b/Desafios Propostos/Player Music/style.css
@@ -136,17 +136,23 @@ progress {
     }
 
     h1 {
+        margin: 0;
+        margin-bottom: 5%;
         font-size: 25px;
     }
 
     h2 {
-        font-size: 15px;
-        margin 0 0 0 0;
+        font-size: 1.5rem;
+        margin: 1rem 0 0 0;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     i {
-        font-size: 15px;
-        margin 0;
+        font-size: 1.5rem;
+        margin: 1.5rem;
         text-align: center;
         display: flex;
         justify-content: center;
@@ -222,8 +228,12 @@ progress {
     }
 
     img {
-        max-width: 100%;
-        border-radius: 10px;
+        max-width: 90%;
+        margin: 0 0 30px 0;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     h1 {
@@ -233,13 +243,17 @@ progress {
     }
 
     h2 {
-        font-size: 20px;
-        margin 0 0 10px 0;
+        font-size: 1rem;
+        margin: 1rem;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     i {
-        font-size: 18px;
-        margin 0 0 10px 0;
+        font-size: 1rem;
+        margin: 1rem;
         text-align: center;
         display: flex;
         justify-content: center;
@@ -256,7 +270,7 @@ progress {
     }
 
     img {
-        width: 90%;
+        width: 100%;
         /* Ajuste a largura da imagem para ocupar toda a largura disponível */
         height: auto;
         /* Mantenha a proporção da imagem */
