--- a/Desafios Propostos/Player Music/style.css
+++ b/Desafios Propostos/Player Music/style.css
@@ -2,8 +2,7 @@
     box-sizing: border-box;
 }
 
-body,
-html {
+body, html {
     padding: 0;
     margin: 0;
 
@@ -16,6 +15,16 @@ html {
     background-color: #333;
     color: #ddd;
     font-family: "Montserrat", sans-serif;
+}
+.container{
+    width: 500px;
+    text-align: center;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
 }
 
 h1 {
